[package]
name = "flamenco"
version = "0.1.0"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
description = "An SMB library"
edition = "2024"

[features]
kenobi = ["dep:kenobi"]

[dependencies]
uuid = { version = "1.20.0", features = ["v4"] }
kenobi = { version = "0.2.0", path = "../kenobi/crates/kenobi", optional = true }
sha2 = "0.10.9"
hmac = "0.12.1"
