[package]
name = "flamenco"
version = "0.1.0"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
description = "An SMB library"
edition = "2024"

[dependencies]
uuid = { version = "1.20.0", features = ["v4"] }
kenobi = "0.4"
sha2 = "0.10.9"
hmac = "0.12.1"
tokio = { version = "1.50.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
] }
chrono = { version = "0.4.44", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
] }

[features]
chrono = ["dep:chrono"]
